# nsm

./: CONTRIBUTING.md  LICENSE  Makefile  README.md  datasets.py  diffusion_net_utils_.py  models.py  pyproject.toml  requirements.txt
.github/not_used_workflows/: building-pypi-linux.yml
.github/workflows/: build-test.yml
GenerativeAnatomy/: __init__.py  computer.py  main.py  train_test.py  utils.py
GenerativeAnatomy/datasets/: datasets.py
GenerativeAnatomy/models/: models.py
GenerativeAnatomy/sdf/: __init__.py  sdf_utils.py
GenerativeAnatomy/sdf/configs/: deep_sdf_config
GenerativeAnatomy/sdf/datasets/: diffusion_sdf_dataset.py  sdf_dataset.py
GenerativeAnatomy/sdf/mesh/: diffusion_sdf.py  main.py
GenerativeAnatomy/sdf/models/: __init__.py  deep_sdf.py  modulated_periodic_activations.py  triplanar.py
GenerativeAnatomy/sdf/models/diffusion_sdf/: combined_model.py  conv_pointnet.py  sdf_decoder.py  sdf_model.py  unet.py  vae.py
GenerativeAnatomy/sdf/reconstruct/: __init__.py  cartilage_func.py  main.py  recon_evaluation.py  reconstruct_diffusion_sdf.py  reconstruct_latent_S3.py  utils.py
GenerativeAnatomy/sdf/testing/: main.py
GenerativeAnatomy/sdf/train/: __init__.py  train_deep_sdf.py  train_deep_sdf_multi_head.py  train_deep_sdf_multi_surface.py  train_diffusion_sdf.py  utils.py
NSM/: __init__.py  utils.py
NSM/configs/: default_config.json  generate_sdf_default_config.py
NSM/datasets/: __init__.py  scrap_code_notes.py  sdf_dataset.py  utils.py
NSM/mesh/: __init__.py  interpolate.py  main.py  refine_mesh.py  triangle_metrics.py
NSM/models/: triplanar.py  two_stage.py
NSM/models/diffusion_sdf/: resnetblock.py
NSM/reconstruct/: __init__.py  cartilage_func.py  main.py  predictive_validation_class.py  recon_evaluation.py  reconstruct_diffusion_sdf.py  reconstruct_latent_S3.py  utils.py
NSM/train/: __init__.py  train_deep_sdf.py  train_deep_sdf_multi_head.py  train_deep_sdf_multi_surface.py  train_diffusion_sdf.py
NSM/train/deprecated/: train_deep_sdf_multi_surface_orig.py  train_deep_sdf_orig.py
examples/: example_1.py
experiments/: config.json  experiments.ipynb
models/: diffusion_layers.py
requirements/: requirements_april.9.2024.txt
testing/: fake_test.py
testing/GenerativeAnatomy/sdf/models/: test_triplanar.py
testing/NSM/models/: test_triplanar.py
testing/testing_h5_vs_np_loading/: save_and_load_h5_vs_np.py
testing/testing_sdf_calculation_times/: pcu_sdfs.npy  time.py  time_pcu_sdf.py  time_vtk_vs_pcu.py  time_vtkimplicit.py  vtk_sdfs.npy
