#https://peps.python.org/pep-0621
#pyproject.toml requirements: 
#https://packaging.python.org/en/latest/specifications/declaring-project-metadata/
# also some ideas from scikit:
# https://scikit-hep.org/developer/pep621

#Specify the requirements needed to build the package.
[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

#Specify the requirements needed to build the project itself. 
#Instructions for defining the project info
[project]
name = "GenerativeAnatomy"
description = "Library for learning to generate human anatomy using generative machine learning methods"
readme = "README.md"
requires-python = ">=3.7"
keywords = ["python"]
license = {text = "MIT"}
authors = [
  { name = "Anthony Gatti", email = "aagatti@stanford.edu" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering",
    "Programming Language :: Python :: 3",
]
dependencies = []
dynamic = ["version"]


[project.urls]
Homepage = "https://github.com/gattia/GenerativeAnatomy/"
Documentation = "https://anthonygattiphd.com/GenerativeAnatomy/" 

# Dynamic metadata - E.g., version here. 
# https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html#dynamic-metadata
[tool.setuptools.dynamic]
version = {attr = "GenerativeAnatomy.__version__"} 

# setuptools specific items
[tool.setuptools]
packages = ['GenerativeAnatomy'] 

# information about "tools" 
[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100
include_trailing_comma = true
sections = ['FUTURE', 'STDLIB', 'THIRDPARTY', 'FIRSTPARTY', 'LOCALFOLDER']
known_first_party = ["cython_functions"]

[tool.black]
line-length = 100
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

# Information needed for cibuildwheel
[tool.cibuildwheel]
# build options: https://cibuildwheel.readthedocs.io/en/stable/options/#build-selection
build = ["cp37-*", "cp38-*", "cp39-*"]
skip = ["*-win32", "*i686", "*aarch64", "*ppc64le", "*s390x", "*musllinux*"]

# testing info: https://cibuildwheel.readthedocs.io/en/stable/options/#testing
test-command = "pytest {project}"
test-requires = ["pytest"]

# https://github.com/pypa/setuptools_scm/
# [tool.setuptools_scm]

[tool.coverage]
run.omit = ["testing/*", "*/*_test.py"]